add links and credit

--- a/index.html
+++ b/index.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html lang="kr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="src/main.css">
+    <link rel="stylesheet" type="text/css" href="src/icon/flaticon.css">
     <title>Sungwoo Park</title>
 </head>
+
 <body>
     <div class="main">
-        <div class="main-left">
-            <div class="profile-image">
-                <img src="src/intro.jpg" alt="">
-            </div>
+        <div class="header">
+                <div class="header-left">
+                        <div class="profile-image">
+                            <img src="src/intro.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="header-right">
+                        <h1>Sungwoo Park</h1>
+                        <h2>박성우</h2>
+                        <div>Student who wants to be world-changing developer!</div>
+                        <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
+                        <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a> <br>
+                        <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a> <br>
+                        <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a> <br>
+                    </div>
         </div>
-        <div class="main-right">
-            <h1>Sungwoo Park</h1>
-            <h2>박성우</h2>
-            <h4>Student who want to be awesome developer</h4>
+        
+        <div class="main-bottom">
+            <div class="credit">
+                <h3>Credit</h3>
+                <div>
+                    Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave
+                        Gandy</a>
+                    from
+                    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                </div>
+                <div>
+                    Icons made by <a href="https://www.flaticon.com/authors/simpleicon"
+                        title="SimpleIcon">SimpleIcon</a>
+                    from
+                    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                </div>
+                <div>
+                    Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
+                        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
