change subtle diff

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 <body>
     <div class="main">
         <div class="header">
-                <div class="header-left">
-                        <div class="profile-image">
-                            <img src="src/intro.jpg" alt="">
-                        </div>
-                    </div>
-                    <div class="header-right">
-                        <h1>Sungwoo Park</h1>
-                        <h2>박성우</h2>
-                        <div>Student who wants to be world-changing developer!</div>
-                        <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
-                        <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a> <br>
-                        <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a> <br>
-                        <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a> <br>
-                    </div>
+            <div class="header-left">
+                <div class="profile-image">
+                    <img src="src/intro.jpg" alt="">
+                </div>
+            </div>
+            <div class="header-right">
+                <h1>Sungwoo Park</h1>
+                <h2>박성우</h2>
+                <div>A student who wants to be a world-changing developer</div>
+                <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
+                <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a>
+                <br>
+                <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a>
+                <br>
+                <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a> <br>
+            </div>
         </div>
-        
+
         <div class="main-bottom">
             <div class="credit">
                 <h3>Credit</h3>
