Add some descriptions (some are TBA)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-right">
                 <h1>Sungwoo Park</h1>
                 <h2>박성우</h2>
-                <div>A student who wants to be a world-changing developer</div>
+                <div>A student who wants to be <b>a world-changing developer</b></div>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
                 <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a>
                 <br>
@@ -31,25 +31,105 @@
             </div>
         </div>
 
+        <div class="main-description">
+            <div class="skill">
+                <h2>Skill</h2>
+                TBA (To Be Added)
+            </div>
+            <div class="edu">
+                <h2>Education</h2>
+                <div>
+                    <h3>SungKyunKwan University</h3>
+                    <ul>
+                        <li>Computer Education, Math Education (2018 - now)</li>
+                        <li>
+                            <a href="https://github.com/cos18/COM2012-DataStructure">Data Structure</a>,
+                            <a href="https://github.com/cos18/COM3026-Algorithm">Algorithm</a>,
+                            Linear Algebra, Number Theory
+                        </li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h3>Korea Digital Media High School</h3>
+                    <ul>
+                        <li>Web Programming (2015 - 2018)</li>
+                        <li>
+                            Java Programming, Web Programming, Database Programming, Android Programming
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="exp">
+                <h2>Experience</h2>
+                <div>
+                    <h3>Likelion @ SungKyunKwan University</h3>
+                    <img src="src/likelion.jpg" alt="">
+                    <ul>
+                        <li>Executive & Education Head (2019)</li>
+                        <li>Session designing and teaching Python&Django to newcomers.</li>
+                        <li>
+                            <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
+                            <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
+                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube Playlist</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h3>Software Maestro 10th</h3>
+                    <ul>
+                        <li>Trainee (2019 - now)</li>
+                        <li>Full-stack Programmer</li>
+                        <li>Making Yoga pose recognition service using Android(Kotlin) & Django(DRF)</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Develup</h3>
+                    <ul>
+                        <li>Mentor (2019 - now)</li>
+                        <li>Helping coding newbie level-up their programming skills!</li>
+                        <li><a href="https://develup.goorm.io/">Homepage</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <h2>Projects</h2>
+                TBA (To Be Added)
+            </div>
+            <div class="speaker">
+                <h2>Speaker</h2>
+                TBA (To Be Added)
+            </div>
+            <div class="award">
+                <h2>Awards</h2>
+                TBA (To Be Added)
+            </div>
+            <div class="extra">
+                <h2>Extra Activities</h2>
+                TBA (To Be Added)
+            </div>
+        </div>
+
         <div class="main-bottom">
             <div class="credit">
-                <h3>Credit</h3>
-                <div>
-                    Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave
-                        Gandy</a>
-                    from
-                    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-                </div>
-                <div>
-                    Icons made by <a href="https://www.flaticon.com/authors/simpleicon"
-                        title="SimpleIcon">SimpleIcon</a>
-                    from
-                    <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-                </div>
-                <div>
-                    Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
-                        href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-                </div>
+                <h2>Credit</h2>
+                <ul>
+                    <li>
+                        Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave
+                            Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                    </li>
+                    <li>
+                        Icons made by <a href="https://www.flaticon.com/authors/simpleicon"
+                            title="SimpleIcon">SimpleIcon</a>
+                        from
+                        <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                    </li>
+                    <li>
+                        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
+                        from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
