--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="header-right">
                 <h1>Sungwoo Park</h1>
                 <h2>박성우</h2>
-                <div>A student who wants to be <b>a world-changing developer</b></div>
+                <div>A student who wants to be a world-changing developer</div>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
                 <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a>
                 <br>
