🤸 Fill all blocks

--- a/index.html
+++ b/index.html
@@ -21,20 +21,95 @@
             <div class="header-right">
                 <h1>Sungwoo Park</h1>
                 <h2>박성우</h2>
-                <div>A student who wants to be a world-changing developer</div>
+                <div>A student who wants to be a world-changing developer!</div>
+                <a href="mailto:codest99@gmail.com"><span class="flaticon-mail"></span>codest99@gmail.com</a><br>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
-                <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-logo"></span>Facebook</a>
+                <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-app-logo"></span>Facebook</a>
                 <br>
                 <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a>
                 <br>
-                <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a> <br>
+                <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a>
             </div>
         </div>
 
         <div class="main-description">
             <div class="skill">
                 <h2>Skill</h2>
-                TBA (To Be Added)
+                <table>
+                    <tr>
+                      <td class="name">C/C++</td>
+                      <td class="level">●●●○○</td>
+                      <td class="name">HTML/CSS</td>
+                      <td class="level">●●●●○</td>
+                    </tr>
+                    <tr>
+                      <td class="name">Kotlin</td>
+                      <td class="level">●●○○○</td>
+                      <td class="name">NodeJS</td>
+                      <td class="level">●●●○○</td>
+                    </tr>
+                    <tr>
+                      <td class="name">Python</td>
+                      <td class="level">●●●○○</td>
+                      <td class="name">Django</td>
+                      <td class="level">●●●○○</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="project">
+                <h2>Projects</h2>
+                <div>
+                    <h3>SomatHealth</h3>
+                    <img src="src/somathealth.png" alt="">
+                    <ul>
+                        <li>May ~ Nov 2019</li>
+                        <li>Making Yoga pose recognition service using Android(Kotlin) & Django</li>
+                        <li>Kotlin, CameraX, Retrofit, Django Rest Framework</li>
+                        <li>Software Maestro Project</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Everyone's Freetime (모두의 공강)</h3>
+                    <img src="src/everyday.png" alt="">
+                    <ul>
+                        <li>Jan ~ Feb 2019</li>
+                        <li>A service to find free time for all team members so that they can easily schedule a team meeting by using Everytime(Korea Univ. Community App)</li>
+                        <li>Django, Heroku</li>
+                        <li>
+                            <a href="http://timetable-checker.herokuapp.com">Demo</a>,
+                            <a href="https://github.com/likelionlabtdd/timetable_checker">Repository</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="exp">
+                <h2>Experience</h2>
+                <div>
+                    <h3>Software Maestro</h3>
+                    <img src="src/swm.jpeg" alt="">
+                    <ul>
+                        <li>10th Trainee (2019)</li>
+                        <li>A government support project designed to discover the best SW talent and contribute to the development of the SW industry.</li>
+                        <li>
+                            <a href="https://www.facebook.com/swmaestro">Facebook Page</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Likelion @ SungKyunKwan University</h3>
+                    <img src="src/likelion.jpg" alt="">
+                    <ul>
+                        <li>Executive & Education Head (2019)</li>
+                        <li>Session designing and teaching Python & Django to newcomers.</li>
+                        <li>
+                            <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
+                            <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
+                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube Playlist</a>
+                        </li>
+                    </ul>
+
+                </div>
+                
             </div>
             <div class="edu">
                 <h2>Education</h2>
@@ -55,35 +130,24 @@
                     <ul>
                         <li>Web Programming (2015 - 2018)</li>
                         <li>
-                            Java Programming, Web Programming, Database Programming, Android Programming
+                            Web Programming, Database Programming, Android Programming
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="exp">
-                <h2>Experience</h2>
+            <div class="speaker">
+                <h2>Speaking</h2>
                 <div>
-                    <h3>Likelion @ SungKyunKwan University</h3>
-                    <img src="src/likelion.jpg" alt="">
-                    <ul>
-                        <li>Executive & Education Head (2019)</li>
-                        <li>Session designing and teaching Python&Django to newcomers.</li>
-                        <li>
-                            <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
-                            <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
-                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube Playlist</a>
-                        </li>
-                    </ul>
-
+                    <h3>개발 입문만 5년차, 학생이 바라본 SW교육 🇰🇷</h3>
+                    <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - Seoul (<a href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">Video</a>)
                 </div>
                 <div>
-                    <h3>Software Maestro 10th</h3>
-                    <ul>
-                        <li>Trainee (2019 - now)</li>
-                        <li>Full-stack Programmer</li>
-                        <li>Making Yoga pose recognition service using Android(Kotlin) & Django(DRF)</li>
-                    </ul>
+                    <h3>SW 의무교육 시대에서 살아남기 - 학생이 바라보는 교육자 🇰🇷</h3>
+                    <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - Seoul (<a href="https://archive.pycon.kr/2018/program/27">Detail</a>, <a href="https://www.slideshare.net/SungWooPark41/high-110673948">Slideshare</a>, <a href="https://youtu.be/0Ejli8PoGyw">Video</a>)
                 </div>
+            </div>
+            <div class="extra">
+                <h2>Extra Activities</h2>
                 <div>
                     <h3>Develup</h3>
                     <ul>
@@ -92,22 +156,6 @@
                         <li><a href="https://develup.goorm.io/">Homepage</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="project">
-                <h2>Projects</h2>
-                TBA (To Be Added)
-            </div>
-            <div class="speaker">
-                <h2>Speaker</h2>
-                TBA (To Be Added)
-            </div>
-            <div class="award">
-                <h2>Awards</h2>
-                TBA (To Be Added)
-            </div>
-            <div class="extra">
-                <h2>Extra Activities</h2>
-                TBA (To Be Added)
             </div>
         </div>
 
