--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="src/main.css">
     <link rel="stylesheet" type="text/css" href="src/icon/flaticon.css">
     <title>Sungwoo Park</title>
@@ -24,7 +41,8 @@
                 <div>A student who wants to be a world-changing developer!</div>
                 <a href="mailto:codest99@gmail.com"><span class="flaticon-mail"></span>codest99@gmail.com</a><br>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
-                <a href="https://www.facebook.com/cos.sungwoo"><span class="flaticon-facebook-app-logo"></span>Facebook</a>
+                <a href="https://www.facebook.com/cos.sungwoo"><span
+                        class="flaticon-facebook-app-logo"></span>Facebook</a>
                 <br>
                 <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a>
                 <br>
@@ -37,24 +55,24 @@
                 <h2>Skill</h2>
                 <table>
                     <tr>
-                      <td class="name">C/C++</td>
-                      <td class="level">●●●○○</td>
-                      <td class="name">HTML/CSS</td>
-                      <td class="level">●●●●○</td>
+                        <td class="name">C/C++</td>
+                        <td class="level">●●●○○</td>
+                        <td class="name">HTML/CSS</td>
+                        <td class="level">●●●●○</td>
                     </tr>
                     <tr>
-                      <td class="name">Kotlin</td>
-                      <td class="level">●●○○○</td>
-                      <td class="name">NodeJS</td>
-                      <td class="level">●●●○○</td>
+                        <td class="name">Kotlin</td>
+                        <td class="level">●●○○○</td>
+                        <td class="name">NodeJS</td>
+                        <td class="level">●●●○○</td>
                     </tr>
                     <tr>
-                      <td class="name">Python</td>
-                      <td class="level">●●●○○</td>
-                      <td class="name">Django</td>
-                      <td class="level">●●●○○</td>
+                        <td class="name">Python</td>
+                        <td class="level">●●●○○</td>
+                        <td class="name">Django</td>
+                        <td class="level">●●●○○</td>
                     </tr>
-                  </table>
+                </table>
             </div>
             <div class="project">
                 <h2>Projects</h2>
@@ -73,7 +91,8 @@
                     <img src="src/everyday.png" alt="">
                     <ul>
                         <li>Jan ~ Feb 2019</li>
-                        <li>A service to find free time for all team members so that they can easily schedule a team meeting by using Everytime(Korea Univ. Community App)</li>
+                        <li>A service to find free time for all team members so that they can easily schedule a team
+                            meeting by using Everytime(Korea Univ. Community App)</li>
                         <li>Django, Heroku</li>
                         <li>
                             <a href="http://timetable-checker.herokuapp.com">Demo</a>,
@@ -89,7 +108,8 @@
                     <img src="src/swm.jpeg" alt="">
                     <ul>
                         <li>10th Trainee (2019)</li>
-                        <li>A government support project designed to discover the best SW talent and contribute to the development of the SW industry.</li>
+                        <li>A government support project designed to discover the best SW talent and contribute to the
+                            development of the SW industry.</li>
                         <li>
                             <a href="https://www.facebook.com/swmaestro">Facebook Page</a>
                         </li>
@@ -104,12 +124,13 @@
                         <li>
                             <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
                             <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
-                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube Playlist</a>
+                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube
+                                Playlist</a>
                         </li>
                     </ul>
 
                 </div>
-                
+
             </div>
             <div class="edu">
                 <h2>Education</h2>
@@ -139,11 +160,15 @@
                 <h2>Speaking</h2>
                 <div>
                     <h3>개발 입문만 5년차, 학생이 바라본 SW교육 🇰🇷</h3>
-                    <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - Seoul (<a href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">Video</a>)
+                    <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - Seoul (<a
+                        href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">Video</a>)
                 </div>
                 <div>
                     <h3>SW 의무교육 시대에서 살아남기 - 학생이 바라보는 교육자 🇰🇷</h3>
-                    <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - Seoul (<a href="https://archive.pycon.kr/2018/program/27">Detail</a>, <a href="https://www.slideshare.net/SungWooPark41/high-110673948">Slideshare</a>, <a href="https://youtu.be/0Ejli8PoGyw">Video</a>)
+                    <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - Seoul (<a
+                        href="https://archive.pycon.kr/2018/program/27">Detail</a>, <a
+                        href="https://www.slideshare.net/SungWooPark41/high-110673948">Slideshare</a>, <a
+                        href="https://youtu.be/0Ejli8PoGyw">Video</a>)
                 </div>
             </div>
             <div class="extra">
