Translate to Korean & add some stuff

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/manifest.json">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -38,7 +39,7 @@
             <div class="header-right">
                 <h1>Sungwoo Park</h1>
                 <h2>박성우</h2>
-                <div>A student who wants to be a world-changing developer!</div>
+                <div>미래를 꿈꾸는 개발자</div>
                 <a href="mailto:codest99@gmail.com"><span class="flaticon-mail"></span>codest99@gmail.com</a><br>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
                 <a href="https://www.facebook.com/cos.sungwoo"><span
@@ -46,13 +47,13 @@
                 <br>
                 <a href="https://www.linkedin.com/in/cos18/"><span class="flaticon-linkedin-sign"></span>LinkedIn</a>
                 <br>
-                <a href="https://blog.sungwoo.dev"><span class="flaticon-blogging"></span>Blog</a>
+                <a href="https://velog.io/@cos"><span class="flaticon-blogging"></span>Blog</a>
             </div>
         </div>
 
         <div class="main-description">
             <div class="skill">
-                <h2>Skill</h2>
+                <h2>기술 / 스택</h2>
                 <table>
                     <tr>
                         <td class="name">C/C++</td>
@@ -61,9 +62,15 @@
                         <td class="level">●●●●○</td>
                     </tr>
                     <tr>
-                        <td class="name">Kotlin</td>
+                        <td class="name">ModernJS</td>
+                        <td class="level">●●●○○</td>
+                        <td class="name">Typescript</td>
                         <td class="level">●●○○○</td>
-                        <td class="name">NodeJS</td>
+                    </tr>
+                    <tr>
+                        <td class="name">NodeJS(Express)</td>
+                        <td class="level">●●●●○</td>
+                        <td class="name">React</td>
                         <td class="level">●●●○○</td>
                     </tr>
                     <tr>
@@ -75,52 +82,79 @@
                 </table>
             </div>
             <div class="project">
-                <h2>Projects</h2>
+                <h2>프로젝트</h2>
+                <div>
+                    <h3>5월 소프트웨어에 물들다 웹사이트</h3>
+                    <img src="src/somul.png" alt="">
+                    <ul>
+                        <li>Mar 2020 ~ (진행중)</li>
+                        <li>매년 5월 진행하는 강연 봉사 프로젝트 사이트 개발 (프론트엔드) & 유지보수</li>
+                        <li>React, Typescript, Storybook, Github Action</li>
+                        <li>
+                            <a href="https://somul.kr/">사이트</a>,
+                            <a href="https://github.com/somul-project/somul-system-frontend">깃헙</a>
+                        </li>
+                    </ul>
+                </div>
                 <div>
                     <h3>SomatHealth</h3>
                     <img src="src/somathealth.png" alt="">
                     <ul>
                         <li>May ~ Nov 2019</li>
-                        <li>Making Yoga pose recognition service using Android(Kotlin) & Django</li>
-                        <li>Kotlin, CameraX, Retrofit, Django Rest Framework</li>
-                        <li>Software Maestro Project</li>
+                        <li>요가 자세 인식 안드로이드 애플리캐이션 기획 & 개발 (풀스택)</li>
+                        <li>Kotlin, CameraX, Retrofit, Django Rest Framework, Nginx, AWS</li>
+                        <li>소프트웨어 마에스트로 프로젝트 - <a href="https://youtu.be/Hc5HKKEyxQo">인터뷰</a></li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Everyone's Freetime (모두의 공강)</h3>
+                    <h3>모두의 공강</h3>
                     <img src="src/everyday.png" alt="">
                     <ul>
                         <li>Jan ~ Feb 2019</li>
-                        <li>A service to find free time for all team members so that they can easily schedule a team
-                            meeting by using Everytime(Korea Univ. Community App)</li>
+                        <li>팀플시 에브리타임에 있는 시간표를 참고해 팀원 모두 참여 가능한 시간을 잡는 서비스 개발</li>
                         <li>Django, Heroku</li>
                         <li>
-                            <a href="http://timetable-checker.herokuapp.com">Demo</a>,
-                            <a href="https://github.com/likelionlabtdd/timetable_checker">Repository</a>
+                            <a href="http://timetable-checker.herokuapp.com">데모</a>,
+                            <a href="https://github.com/likelionlabtdd/timetable_checker">깃헙</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="exp">
-                <h2>Experience</h2>
+                <h2>경력</h2>
                 <div>
-                    <h3>Software Maestro</h3>
-                    <img src="src/swm.jpeg" alt="">
+                    <h3>42 Seoul</h3>
+                    <!--
+                    <img src="" alt="">
+                    -->
                     <ul>
-                        <li>10th Trainee (2019)</li>
-                        <li>A government support project designed to discover the best SW talent and contribute to the
-                            development of the SW industry.</li>
+                        <li>1기 Cadet (2020~)</li>
+                        <li>프랑스에서 시작된 ecole42의 서울 캠퍼스 본과정 프로그램에 참여하여 현재 참여중입니다.
+                            42는 소프트웨어에 대한 경험을 나누는 방법, 멋진 동료와 협업하는 방법, 누군가를 위해 본인의 경험을 공유하는 방법을 배웁니다. 그리고 배우는 방법을 배웁니다.
+                        </li>
                         <li>
-                            <a href="https://www.facebook.com/swmaestro">Facebook Page</a>
+                            <a href="https://42seoul.kr">홈페이지</a>,
+                            <a href="https://github.com/cos18/42cursus">진행중인 프로젝트 (깃헙)</a>
                         </li>
                     </ul>
                 </div>
                 <div>
-                    <h3>Likelion @ SungKyunKwan University</h3>
+                    <h3>소프트웨어 마에스트로</h3>
+                    <img src="src/swm.jpeg" alt="">
+                    <ul>
+                        <li>10기 수료생 (2019)</li>
+                        <li>창의도전형 SW인재 육성으로 SW산업의 미래르 선도하는 정부지원 사업인 소프트웨어 마에스트로 과정에 참여하여 수료했습니다.</li>
+                        <li>
+                            <a href="http://swmaestro.org/">홈페이지</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>멋쟁이 사자처럼 @ 성균관대학교</h3>
                     <img src="src/likelion.jpg" alt="">
                     <ul>
-                        <li>Executive & Education Head (2019)</li>
-                        <li>Session designing and teaching Python & Django to newcomers.</li>
+                        <li>7기 운영진 & 교육책임자 (2019)</li>
+                        <li>Python & Django 세션 및 스터디를 진행했습니다.</li>
                         <li>
                             <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
                             <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
@@ -133,55 +167,61 @@
 
             </div>
             <div class="edu">
-                <h2>Education</h2>
+                <h2>학력</h2>
                 <div>
-                    <h3>SungKyunKwan University</h3>
+                    <h3>성균관대학교</h3>
                     <ul>
-                        <li>Computer Education, Math Education (2018 - now)</li>
+                        <li>컴퓨터교육과, 수학교육과 (2018 - now)</li>
                         <li>
-                            <a href="https://github.com/cos18/COM2012-DataStructure">Data Structure</a>,
-                            <a href="https://github.com/cos18/COM3026-Algorithm">Algorithm</a>,
-                            Linear Algebra, Number Theory
+                            <a href="https://github.com/cos18/COM2012-DataStructure">자료구조</a>,
+                            <a href="https://github.com/cos18/COM3026-Algorithm">알고리즘</a>,
+                            <a href="https://github.com/cos18/linux-socket.git">리눅스시스템</a>,
+                            선형대수학, 정수론, 미분기하학
                         </li>
                     </ul>
 
                 </div>
                 <div>
-                    <h3>Korea Digital Media High School</h3>
+                    <h3>한국디지털미디어고등학교</h3>
                     <ul>
-                        <li>Web Programming (2015 - 2018)</li>
+                        <li>웹프로그래밍과 (2015 - 2018)</li>
                         <li>
-                            Web Programming, Database Programming, Android Programming
+                            웹프로그래밍, 데이터베이스, 안드로이드 프로그래밍
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="speaker">
-                <h2>Speaking</h2>
+                <h2>발표</h2>
+                <div>
+                    <h3>파알못 30명과 함께 Django까지 마스터한.ssul 🇰🇷</h3>
+                    <a href="https://archive.pycon.kr/2019/">PyconKR 2019</a> (라이트닝 토크) / Aug. 2019 - 서울 (<a
+                        href="https://youtu.be/TUW-ytKumpM">영상</a>)
+                </div>
                 <div>
                     <h3>개발 입문만 5년차, 학생이 바라본 SW교육 🇰🇷</h3>
-                    <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - Seoul (<a
-                        href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">Video</a>)
+                    <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - 서울 (<a
+                        href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">영상</a>)
                 </div>
                 <div>
                     <h3>SW 의무교육 시대에서 살아남기 - 학생이 바라보는 교육자 🇰🇷</h3>
-                    <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - Seoul (<a
-                        href="https://archive.pycon.kr/2018/program/27">Detail</a>, <a
-                        href="https://www.slideshare.net/SungWooPark41/high-110673948">Slideshare</a>, <a
-                        href="https://youtu.be/0Ejli8PoGyw">Video</a>)
+                    <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - 서울 (<a
+                        href="https://archive.pycon.kr/2018/program/27">상세내역</a>, <a
+                        href="https://www.slideshare.net/SungWooPark41/high-110673948">슬라이드</a>, <a
+                        href="https://youtu.be/0Ejli8PoGyw">영상</a>)
                 </div>
             </div>
+            <!--
             <div class="extra">
                 <h2>Extra Activities</h2>
                 <div>
-                    <h3>Develup</h3>
+                    <h3>extra</h3>
                     <ul>
-                        <li>Mentor (2019 - now)</li>
-                        <li>Helping coding newbie level-up their programming skills!</li>
-                        <li><a href="https://develup.goorm.io/">Homepage</a></li>
+                        <li>Empty</li>
                     </ul>
                 </div>
             </div>
+            -->
         </div>
 
         <div class="main-bottom">
